make build system use kotlin